--- a/website/styles.css
+++ b/website/styles.css
@@ -279,20 +279,22 @@ a:active, button:active {
 }
 
 .logo img {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100px;
+    display: block;
+    width: 100%;
     height: auto;
     transition: opacity 0.5s ease;
 }
 
 .logo-black {
     opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
 }
 
 .logo-white {
     opacity: 1;
+    position: relative;
 }
 
 /* Header Social Icons */
